test/src/e2e_vm_tests/test_programs/should_pass/language/primitive_type_argument/src/foo/bar/baz.sw
library;

mod quux;

pub struct ExampleStruct<T, U> {
  pub a_field: T,
  pub b_field: U 
}
