test/src/e2e_vm_tests/test_programs/should_fail/primitive_type_argument/src/foo/bar.sw
library;

pub struct ExampleStruct<T> {
  pub a_field: T
}
